--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" href="img/favicon.png">
   <link rel="icon" href="https://icons8.com/icon/96847/%E3%82%B3%E3%83%BC%E3%83%92%E3%83%BC%E8%B1%86">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.0/font/bootstrap-icons.css">
+  <!-- 画像はぱたくそのを利用しています。 -->
+  <!-- 男性のイラストはソコストのを利用しています。 -->
 </head>
 <body>
   <header>
